Added Covid19 Tracker

--- a/src/components/widgets/Weather/WeatherSmall/WeatherSmall.module.css
+++ b/src/components/widgets/Weather/WeatherSmall/WeatherSmall.module.css
@@ -10,6 +10,9 @@
 }
 
 .city {
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical; 
     font-size: 24px;
 }
 .temp {
