Added FormTemplate + Weather Form Fixed Settings Transitions and Pagination

--- a/src/containers/Settings/Settings.module.css
+++ b/src/containers/Settings/Settings.module.css
@@ -17,7 +17,7 @@
 
 .main {
     display: grid;
-    grid-template-rows: repeat(1, 100%);
+    grid-template-rows: repeat(1, 100vh);
     overflow-y: visible;
     transition: transform 0.4s ease;
 }
@@ -25,6 +25,7 @@
 .Settings {
     display: flex;
     flex-direction: column;
+    height: 100vh;
 }
 
 .Settings header {
