--- a/src/containers/Settings/Settings.module.css
+++ b/src/containers/Settings/Settings.module.css
@@ -45,12 +45,49 @@
 }
 
 .option {
+    cursor: pointer;
     display: grid;
-    grid-template-rows: 8fr 4fr;
-    border: 1px solid white;
-    border-radius: 48px;
+    grid-template-rows: 6fr 2fr;
     justify-content: center;
     align-items: center;
     margin: 8px;
-    height: 300px;
+    height: 246px;
+    opacity: 0.64;
+    transition: 0.2s ease-in;
+}
+.option:hover {
+    opacity: 1;
+}
+
+.iconContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+.iconContainer svg {
+    width: 100px;
+    height: 100px;
+    margin-top: 16px;
+}
+
+.sides {
+    display: flex;
+    height: max(140px, 18vh);
+}
+
+.uiBtns {
+    background: transparent;
+    border: none;
+    user-select: none;
+    outline: none;
+    opacity: 0.8;
+    transition: 0.2s ease;
+}
+.uiBtns:hover {
+    opacity: 1;
+}
+
+.upArrow {
+    justify-self: end;
 }
