--- a/src/ui/Radio.module.css
+++ b/src/ui/Radio.module.css
@@ -8,13 +8,10 @@
 .Radio label {
     cursor: pointer;
     font-size: 22px;
-    background-color: black;
+    background-color: rgba(255,255,255,0.32);
     color: #dedede;
     padding: 8px 16px;
     border-radius: 4px;
-    -webkit-box-shadow: 4px 4px 12px 1px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 4px 4px 12px 1px rgba(0, 0, 0, 0.75);
-    box-shadow: 4px 4px 12px 1px rgba(0, 0, 0, 0.75);
     transition: 0.3s ease;
 }
 
