Added pre-loading screen. - Minor UI bugfixes

--- a/src/containers/Dashboard.module.css
+++ b/src/containers/Dashboard.module.css
@@ -14,3 +14,14 @@
 .menuBtn:hover {
     opacity: 1;
 }
+
+.zeroWidgets {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    height: 100%;
+    color: #dedede;
+    font-size: larger;
+}
