--- a/src/containers/Settings/forms/ConfigForm.module.css
+++ b/src/containers/Settings/forms/ConfigForm.module.css
@@ -22,6 +22,19 @@
     grid-template-columns: 3fr 1.5fr 1.5fr;
 }
 
+.colorPicker {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.colorPicker input {
+    width: 100%;
+    height: 100px;
+    margin: 20px;
+}
+
 .imagePickerDropzone {
     margin: 4px auto;
     display: flex;
