Added About Page

--- a/src/containers/Settings/Settings.module.css
+++ b/src/containers/Settings/Settings.module.css
@@ -51,7 +51,7 @@
     justify-content: center;
     align-items: center;
     margin: 8px;
-    height: 246px;
+    height: 86%;
     opacity: 0.64;
     transition: 0.2s ease-in;
 }
