Added Global CSS files to fix weird font-size bug - Font-sizes in production and build were different for some elements - E.g: h1, h2, p, etc.

--- a/public/global.css
+++ b/public/global.css
@@ -1,4 +1,10 @@
+/* TODO: Cross check all font-sizes with build */
+
 /* No idea why h* has different font in build */
+body {
+    background-color: #282c34;
+}
+
 h1 {
     font-size: 32px;
 }
