--- a/src/ui/Dropdown.module.css
+++ b/src/ui/Dropdown.module.css
@@ -5,4 +5,5 @@
     border-radius: 4px;
     background: url("http://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/br_down.png") white no-repeat calc(100% - 10px);
     color: black;
+    font-size: 16px;
 }
