--- a/src/ui/Button.module.css
+++ b/src/ui/Button.module.css
@@ -8,6 +8,7 @@
     border-radius: 4px;
     transition: 0.3s ease;
     margin: auto;
+    outline: none;
 }
 
 .Button:disabled {
@@ -15,6 +16,10 @@
 }
 
 .Button:not(:disabled):hover {
-    background-color: white;
+    background-color: rgba(255,255,255,0.8);
     color: #383838;
+}
+
+.Button:not(:disabled):active {
+    background-color: rgba(255,255,255,1);
 }
