--- a/src/containers/Settings/forms/RemoveWIdgetForm.module.css
+++ b/src/containers/Settings/forms/RemoveWIdgetForm.module.css
@@ -35,9 +35,9 @@
     cursor: pointer;
     transition: 0.2s ease-out;
 }
-.deleteBtn:hover {
+.deleteBtn svg:hover {
     stroke: rgb(255, 70, 70, 0.8);
 }
-.deleteBtn:active {
+.deleteBtn svg:active {
     stroke: rgb(255, 70, 70, 1);
 }
