--- a/src/containers/Dashboard.module.css
+++ b/src/containers/Dashboard.module.css
@@ -1,3 +1,17 @@
+.Intro {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    background-color: #282c34;
+    color: #dedede;
+    transition: 0.5s ease-in;
+    z-index: 999;
+    font-size: xx-large;
+}
+
 .menuBtn {
     position: absolute; 
     bottom: 0;
