Added structure and settings page

--- a/src/v2/common/global.module.scss
+++ b/src/v2/common/global.module.scss
@@ -10,8 +10,9 @@
     z-index: $z;
 }
 
-@mixin flexify($j: center, $a: center) {
+@mixin flexify($d: row, $j: center, $a: center) {
     display: flex;
+    flex-direction: $d;
     justify-content: $j;
     align-items: $a;
 }
