--- a/src/v2/containers/Foreground/Foreground.module.scss
+++ b/src/v2/containers/Foreground/Foreground.module.scss
@@ -1,4 +1,4 @@
-@import '../global.module.scss';
+@import '../../common/global.module.scss';
 
 .Foreground {
     @include fullScreen;
@@ -9,7 +9,6 @@
     position: absolute; 
     bottom: 0;
     right: 0; 
-    z-index: 9999;
     background-color: transparent;
     border: none;
     user-select: none;
