--- a/src/v2/containers/Foreground/Settings/Settings.module.scss
+++ b/src/v2/containers/Foreground/Settings/Settings.module.scss
@@ -9,7 +9,7 @@
     backdrop-filter: blur(4.8px);
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
-    // transform: translateY(100%);
+    overflow: hidden;
 }
 
 .page {
@@ -52,25 +52,16 @@
     }
 }
 
+.main {
+    display: grid;
+    grid-template-rows: repeat(1, 100vh);
+    overflow-y: visible;
+    transition: transform 0.4s ease;
+    grid-column: 2 / 3;
+}
+
 .RootSettings {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     row-gap: 24px;
-}
-
-.Option {
-    @include flexify($d: column);
-    cursor: pointer;
-    opacity: 0.64;
-    transition: 0.2s ease-in;
-
-    svg {
-        width: 100px;
-        height: 100px;
-        margin-top: 16px;
-    }
-
-    &:hover {
-        opacity: 1;
-    }
 }
