Added Weather, Calendar, widget retention, secrets, etc.

--- a/src/v2/common/ui/Page.module.scss
+++ b/src/v2/common/ui/Page.module.scss
@@ -44,6 +44,7 @@
     cursor: pointer;
     opacity: 0.64;
     transition: 0.2s ease-in;
+    text-align: center;
 
     svg {
         width: 100px;
