--- a/src/v2/containers/Dashboard/Dashboard.module.scss
+++ b/src/v2/containers/Dashboard/Dashboard.module.scss
@@ -5,17 +5,28 @@
     @include posFixed($z: 99);
 }
 
-.menuBtn {
+.toolbar {
+    @include flexify($d: column);
+    row-gap: 8px;
     position: absolute; 
     bottom: 0;
     right: 0; 
-    background-color: transparent;
+    padding: 0 3px 3px 0;
+}
+
+.toolbarBtn {
+    @include flexify;
+    background-color: rgba(0, 0, 0, 0.64);
+    border-radius: 160px;
+    padding: 4px;
     border: none;
     user-select: none;
     outline: 0;
     opacity: 0.76;
     transition: 0.2s ease;
     cursor: pointer;
+    width: 50px;
+    height: 50px;
 
     &:hover {
         opacity: 1;
