--- a/src/v2/containers/Foreground/AddWidget/AddWidget.module.scss
+++ b/src/v2/containers/Foreground/AddWidget/AddWidget.module.scss
@@ -1,12 +1,10 @@
 @import '../../../common/global.module.scss';
 
-.Settings {
+.AddWidget {
     @include fullScreen;
     @include posFixed($z: 9999);
-    background-color: rgba(0, 0, 0, 0.64);
     color: lightgrey;
     transition: transform 0.4s ease;
-    backdrop-filter: blur(4.8px);
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
     overflow: hidden;
@@ -60,7 +58,7 @@
     grid-column: 2 / 3;
 }
 
-.RootSettings {
+.RootAddWidget {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     row-gap: 24px;
