--- a/src/v2/widgets/Calendar/Calendar.module.scss
+++ b/src/v2/widgets/Calendar/Calendar.module.scss
@@ -1,36 +1,35 @@
 .Calendar {
-    background-color: rgb(32, 32, 32);
+    background-color: rgb(0, 0, 0, 0.56);
     color: #dedede;
     position: fixed;
-    width: 248px;
-    height: 224px;
-    border-radius: 48px;
+    width: calc(1.24 * 248px);
+    height: calc(1.24 * 224px);
+    // border-radius: 48px;
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
     align-items: center;
     user-select: none;
+    transform: scale(2);
 
     hr {
         width: 86%;
-        margin: 4px 0;
+        margin: 6px 0;
     }
     
 }
 
 .header {
     width: 76%;
-    margin-top: 18px;
+    margin-top: 4px;
     display: flex;
     flex-direction: row;
     text-transform: uppercase;
-}
-.month {
-    font-size: 22px;
+    font-size: calc(1.28 * 18px);
 }
 .year {
     flex-grow: 1;
     text-align: end;
-    font-size: 22px;
     color: tomato;
 }
 
@@ -40,6 +39,8 @@
     display: grid;
     grid-template-columns: repeat(7, 1fr);
     grid-template-rows: repeat(6, 1fr);
+    gap: 8px;
+    margin-bottom: 8px;
 }
 
 .day {
@@ -47,14 +48,10 @@
     justify-content: center;
     align-items: center;
     color: #dedede;
-    border-radius: 20px;
-    font-size: 14px;
+    font-size: calc(1.24 * 16px);
 
     &:nth-child(-n+7) {
         font-weight: bold;
+        opacity: 100%;
     }
-}
-
-.sunday {
-    color: tomato;
 }
