--- a/src/v2/containers/Widget.module.scss
+++ b/src/v2/containers/Widget.module.scss
@@ -15,6 +15,8 @@
     border-radius: 100px;
     opacity: 0.9;
     cursor: pointer;
+    margin: -18px -18px;
+    position: absolute;
 
     &:hover {
         opacity: 1;
