--- a/src/common/ui/Accordion.module.scss
+++ b/src/common/ui/Accordion.module.scss
@@ -1,6 +1,6 @@
 .Accordion {
     width: 100%;
-    margin: auto;
+    margin: 0 auto 16px;
     color: #dedede;
 
     h2 {
@@ -24,4 +24,5 @@
 
 .content {
     overflow: hidden;
+    margin: 8px 0 24px;
 }
