--- a/src/containers/Foreground/Settings/pages/Background/Background.module.scss
+++ b/src/containers/Foreground/Settings/pages/Background/Background.module.scss
@@ -1,4 +1,4 @@
-@import '../../../../common/global.module.scss';
+@import '../../../../../common/global.module.scss';
 
 .form {
     display: flex;
