--- a/src/containers/Foreground/Settings/pages/Background/Background.module.scss
+++ b/src/containers/Foreground/Settings/pages/Background/Background.module.scss
@@ -1,5 +1,10 @@
 @import '../../../../../common/global.module.scss';
 
+.Background {
+    h3 { font-size: 18.72px; }
+    h4, span, p { font-size: 16px; }
+}
+
 .form {
     display: flex;
     flex-direction: column;
