--- a/src/widgets/Quotes/Quotes.module.scss
+++ b/src/widgets/Quotes/Quotes.module.scss
@@ -25,6 +25,9 @@
 
 
 .QuotesForm {
+    h3 { font-size: 18.72px; }
+    h4 { font-size: 16px; }
+    
     .inputArea {
         display: flex;
         flex-direction: row;
