Font update and UI fixes

--- a/src/common/global.module.scss
+++ b/src/common/global.module.scss
@@ -16,3 +16,9 @@
     justify-content: $j;
     align-items: $a;
 }
+
+@mixin hideScrollbar {
+    overflow-y: hidden;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+}
