--- a/src/containers/Foreground/ModifyWidget/ModifyWidget.module.scss
+++ b/src/containers/Foreground/ModifyWidget/ModifyWidget.module.scss
@@ -1,65 +1,18 @@
 @import '../../../common/global.module.scss';
 
-.AddWidget {
-    @include fullScreen;
-    @include posFixed($z: 9999);
-    color: lightgrey;
-    transition: transform 0.4s ease;
-    display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
-    overflow: hidden;
-}
-
-.page {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    grid-column: 2 / 3;
-
-    header {
-        height: max(140px, 18vh);
-    }
-
-    section {
-        height: max(620px, 82vh);
-        overflow-y: scroll;
-        -ms-overflow-style: none;  /* Internet Explorer 10+ */
-        scrollbar-width: none;  /* Firefox */
-    }
-
-    section::-webkit-scrollbar { 
-        display: none;  /* Safari and Chrome */
-    }
-}
-
-.sides {
-    display: flex;
-    height: max(140px, 18vh);
-}
-
-.uiBtns {
-    background: transparent;
-    border: none;
-    user-select: none;
-    outline: none;
-    opacity: 0.8;
-    transition: 0.2s ease;
-
-    &:hover {
-        opacity: 1;
-    }
-}
-
 .main {
     display: grid;
-    grid-template-rows: repeat(1, 100vh);
-    overflow-y: visible;
-    transition: transform 0.4s ease;
-    grid-column: 2 / 3;
+    grid-template-columns: 1.5fr 2fr;
+    column-gap: 10px;
 }
 
-.RootAddWidget {
+.menus {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    row-gap: 24px;
+    column-gap: 16px;
+    margin: 0 16px 0 0;
+
+    button {
+        width: 100%;
+    }
 }
