--- a/src/containers/Foreground/ModifyWidget/ModifyWidget.module.scss
+++ b/src/containers/Foreground/ModifyWidget/ModifyWidget.module.scss
@@ -16,3 +16,25 @@
         width: 100%;
     }
 }
+
+.menuSection {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-grow: 1;
+
+    & > div {
+        width: 100%;
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        margin: 12px;
+
+        h2 {
+            margin: 0;
+        }
+
+        input {
+            font-size: 20px;
+        }
+    }
+}
